refactor: organizando endpoint publicaciones
