# public/docs/apidocs.json
@@ -119,6 +119,67 @@
         }
       }
     },
+    "/publicaciones/": {
+      "post": {
+        "summary": "Para realizar una publicación p2p",
+        "security": [
+          {
+            "api_token": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "USR_TOKEN",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id_intencion_de_venta": {
+                    "type": "integer"
+                  },
+                  "precio": {
+                    "type": "number"
+                  }
+                }
+              },
+              "example": {
+                "id_intencion_de_venta": 1,
+                "precio": 99000
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Publicacion p2p OK",
+            "content": {
+              "application/json": {
+                "example": {
+                  "mensaje": "Registro exitoso de publicacion con id 37"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/NoAutorizado"
+          },
+          "404": {
+            "$ref": "#/components/responses/NoExistente"
+          },
+          "409": {
+            "$ref": "#/components/responses/TransicionInvalida"
+          }
+        }
+      }
+    },
     "/publicaciones/{id}/ofertas": {
       "post": {
         "summary": "Permite realizar una oferta sobre una publicación",
@@ -665,6 +726,16 @@
           }
         }
       },
+      "TransicionInvalida": {
+        "description": "El estado del auto no permite esta transición",
+        "content": {
+          "application/json": {
+            "example": {
+              "mensaje": "El auto no esta en condiciones de ser publicado"
+            }
+          }
+        }
+      },
       "NoRegistrado": {
         "description": "Requiere registración",
         "content": {
@@ -700,8 +771,7 @@
         "content": {
           "application/json": {
             "example": {
-              "mensaje": "Solo puede contrartar test-drive para autos de Fiubak",
-              "components": null
+              "mensaje": "Solo puede contrartar test-drive para autos de Fiubak"
             }
           }
         }
